# pyproject.toml
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "theknot"
description = "A library for adding arbitrary items to TheKnot registries"
authors = [
	{name = "Estelle Poulin", email = "dev@inspiredby.es"},
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["theknot"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]


[project.urls]
homepage = "https://github.com/estheruary/python-theknot"
repository = "https://github.com/estheruary/python-theknot"
changelog = "https://gitlab.com/estheruary/theknot/-/blob/main/CHANGELOG.md"

[project.scripts]
theknot = "theknot.cli:main"


[tool.setuptools]
packages = ["theknot"]


[tool.setuptools.dynamic]
version = {attr = "theknot.__version__"}
dependencies = {file = ["requirements.txt"]}


[tool.black]
line-length = 100


[tool.isort]
profile = "black"


[tool.vulture]
ignore_names = ["self", "cls"]
